--- a/src/Board.css
+++ b/src/Board.css
@@ -1,7 +1,5 @@
 .Board{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    width: 35%;
-    margin: auto;
+    /* margin: auto; */
 }
